--fixed small bug in a carousel jumping

--- a/public/styles.css
+++ b/public/styles.css
@@ -213,6 +213,7 @@ body {
   grid-area: 1/1/3/3;
   width: 100%;
   height: 100%;
+  object-fit: cover;
   border-radius: 5px 5px 0 0;
 }
 
@@ -337,7 +338,7 @@ td {
 .related-items-grid-frame {
   grid-area: 1/2/2/3;
   /* margin: 30px auto; */
-  height: 260px;
+  height: 265px;
   width: 872px;
   display: flex;
   justify-content: center;
